8241603: ZGC: java/lang/management/MemoryMXBean/MemoryTestZGC.sh crashes on macOS

Reviewed-by: eosterlund, clanger, mbaesken, azeller